Search city with search query
Search city with search query, with swagger docs
auth middleware now check user id in database
Continue building create event
